# ToDO-List-App

./: README.md
backend/: .gitignore  README.md  pyproject.toml  run.sh
backend/src/: config.py  main.py
backend/src/db/: client.py  task.py  user.py
backend/src/routes/v1/: auth.py  tasks.py  user.py
backend/src/scheme/: custom.py  startup.py  task.py  user.py
backend/src/utils/: auth.py  security.py  typing.py
backend/test/: test_access.py  test_task.py
frontend/: README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: app.tsx  config.ts  main.tsx  routeTree.gen.ts
frontend/src/components/: task-item.tsx
frontend/src/components/access/: sign-in.test.tsx  sign-in.tsx  sign-up.test.tsx  sign-up.tsx
frontend/src/components/access/tabs/: tab-item.tsx  tab.test.tsx  tab.tsx  types.ts
frontend/src/components/task/card/: task-item.tsx  task-status-counter.tsx  types.ts
frontend/src/context/: auth-context.tsx  task-context.tsx  task-filter-context.tsx  types.ts
frontend/src/hooks/: use-localStorage.ts
frontend/src/hooks/auth/: use-auth.ts
frontend/src/hooks/form/: use-form.ts  use.form.test.tsx
frontend/src/hooks/task/: use-task-filter.ts  use-task.ts
frontend/src/reducer/: task-reducer.ts  types.ts
frontend/src/routes/: __root.tsx
frontend/src/routes/access/: index.tsx
frontend/src/routes/tasks/: index.tsx
frontend/src/services/auth/: index.ts  types.ts
frontend/src/services/task/: index.ts  types.ts
frontend/src/services/users/: index.ts  types.ts
(+6 files in other folders)
